css fix for partners column

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2774,7 +2774,17 @@ a:hover {
   padding-top: 2.5rem;
 }
 
+#partner-structure>.partner_column>h3{
+  font-size: 15px!important;
+  padding-left: 3rem!important;
+}
+
 @media screen and (max-width:736px) {
+  #partner-structure>.partner_column>h3{
+    font-size: 16px!important;
+    padding-left: 0rem!important;
+  }
+
   #exchange-column-2 {
     margin-top: 2rem !important;
   }
