--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,30 +299,9 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   text-decoration: none
 }
 
-h1.major, h2.major, h3.major {
-  position: relative
-}
-
-h1.major:after, h2.major:after, h3.major:after {
-  content: "";
-  position: absolute;
-  left: 0;
-  width: 3.5rem;
-  height: .1rem;
-  background-color: rgba(255, 255, 255, .25)
-}
-
 h1 {
   font-size: 3rem;
   line-height: 1.2
-}
-
-h1.major {
-  margin: 0 0 2.625rem 0
-}
-
-h1.major:after {
-  bottom: -1.325rem
 }
 
 h2 {
@@ -330,24 +309,8 @@ h2 {
   line-height: 1.2
 }
 
-h2.major {
-  margin: 0 0 1.9875rem 0
-}
-
-h2.major:after {
-  bottom: -1.2rem
-}
-
 h3 {
   font-size: 1.325rem
-}
-
-h3.major {
-  margin: 0 0 1.875rem 0
-}
-
-h3.major:after {
-  bottom: -.75rem
 }
 
 h4 {
@@ -384,37 +347,13 @@ h6 {
     line-height: 1.2
   }
 
-  h1.major {
-    margin: 0 0 2.625rem 0
-  }
-
-  h1.major:after {
-    bottom: -1.325rem
-  }
-
   h2 {
     font-size: 1.5rem;
     line-height: 1.2
   }
 
-  h2.major {
-    margin: 0 0 1.9875rem 0
-  }
-
-  h2.major:after {
-    bottom: -1.2rem
-  }
-
   h3 {
     font-size: 1rem
-  }
-
-  h3.major {
-    margin: 0 0 1.875rem 0
-  }
-
-  h3.major:after {
-    bottom: -.75rem
   }
 
   h4 {
@@ -2779,6 +2718,8 @@ a:hover {
   padding-bottom: 0.6rem;
 }
 
+/* Mobile Fixes */
+
 @media screen and (max-width:736px) {
   .panel {
     border-radius: 0rem;
@@ -2869,9 +2810,7 @@ a:hover {
 }
 
 /* Light mode */
-
 @media (prefers-color-scheme: light) {
-
   #page-wrapper {
     background: white !important;
     color: black !important;
@@ -2928,7 +2867,7 @@ a:hover {
     display: none;
   }
 
-  #protocol_title, a{
-    margin-left:1rem;
+  #protocol_title, a {
+    margin-left: 1rem;
   }
 }
