--- a/_includes/body_javascripts.html
+++ b/_includes/body_javascripts.html
@@ -5,3 +5,4 @@
 <script src="assets/js/main.js"></script>
 <script src="assets/js/overlay.js"></script>
 <script src="assets/js/slider.js"></script>
+<script src="assets/js/blog-data.js"></script>
