--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,6 +111,17 @@ input, select, textarea {
   }
 }
 
+
+blockquote {
+    border-left: solid 0.25rem rgba(255, 255, 255, 0.25);
+    font-style: italic;
+    margin: 0 0 1.5rem 0;
+    padding: 0.375rem 0 0.375rem 1.5rem;
+    max-height: 5.25rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 html {
   width: 100%;
   height: 100%
