--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -111,15 +111,19 @@ input, select, textarea {
   }
 }
 
-
 blockquote {
-    border-left: solid 0.25rem rgba(255, 255, 255, 0.25);
-    font-style: italic;
-    margin: 0 0 1.5rem 0;
-    padding: 0.375rem 0 0.375rem 1.5rem;
-    max-height: 5.25rem;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  border-left: solid 0rem rgba(255, 255, 255, 0.25);
+  font-style: italic;
+  margin: 0 0 1.5rem 0;
+  padding: 0.375rem 0 0.375rem 1.5rem;
+  max-height: 5.25rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+#blog-title {
+  margin-bottom: 0.2rem;
+  margin-left: 1.3rem;
 }
 
 html {
@@ -2243,9 +2247,9 @@ body.is-preload #wrapper {
 }
 
 .roadmap_list {
-  font-size: 12px;
-  margin: 1rem;
-  line-height: 160%
+  font-size: 14px;
+  margin: 0.8rem;
+  line-height: 160%;
 }
 
 .roadmap_list>a>li:hover {
