--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2269,9 +2269,10 @@ label {
   background: #1a293c;
   color: #7db5d2;
   border-radius: 0.5rem;
-  padding: 0.5rem;
-  margin: 0.5rem;
-  height: 180px;
+  padding: 1rem;
+  margin: 1rem;
+  height: 290px;
+  width: 200px;
 }
 
 .center-everything {
@@ -2296,6 +2297,7 @@ label {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  margin-top: 20px;
 }
 
 .button-da {
@@ -2318,8 +2320,8 @@ label {
 }
 
 .da-pic {
-  height: 100px;
-  width: 100px;
+  height: 150px;
+  width: 150px;
   margin: 0.1rem;
   opacity: 1 !important;
   border-radius: 0.5rem !important;
@@ -2516,9 +2518,10 @@ label.fcf-label {
 .waves {
   position: relative;
   width: 100%;
+  
   min-height: 100px;
   max-height: 200px;
-  margin-bottom: -10rem !important;
+  margin-bottom: -13rem !important;
 }
 
 .content {
@@ -2758,6 +2761,8 @@ a:hover {
 .da-team-outer {
   width: auto;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: row !important;
   margin: 1rem;
 }
@@ -2765,8 +2770,8 @@ a:hover {
 /* Mobile Fixes */
 @media screen and (max-width:736px) {
   .da-pic {
-    width: 150px;
-    height: 150px;
+    width: 125px;
+    height: 125px;
   }
 
   .da-name, .da-position {
@@ -2793,6 +2798,8 @@ a:hover {
     height: auto;
     justify-content: center;
     text-align: center;
+    width: auto;
+    
   }
 
   .da-team-outer {
