--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,300i,400i);
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
 a, b, body, center, div, form, h1, h2, h3, h4, h5, h6, header, html, i, img, label, li, p, q, s, section, span, ul {
   margin: 0;
@@ -7,7 +7,7 @@ a, b, body, center, div, form, h1, h2, h3, h4, h5, h6, header, html, i, img, lab
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  color: #7db5d2 !important
+  color: rgb(186, 186, 186) !important
 }
 
 header, section {
@@ -198,7 +198,7 @@ body:after {
   width: 100%;
   height: 100%;
   z-index: -1;
-  background-color: #1a293c
+  background-color: #222
 }
 
 body.is-preload *, body.is-preload :after, body.is-preload :before {
@@ -263,7 +263,7 @@ html {
 
 body, input, select, textarea {
   color: rgba(255, 255, 255, .75);
-  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   font-weight: 300;
   line-height: 1.65
@@ -302,7 +302,7 @@ body.is-ie p {
 
 h1, h2, h3, h4, h5, h6 {
   color: rgba(255, 255, 255, .875);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 700;
   line-height: 1.3;
   margin: 0 0 .75rem 0;
@@ -405,7 +405,7 @@ form>:last-child {
 label {
   color: rgba(255, 255, 255, .875);
   display: block;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: .8rem;
   font-weight: 700;
   margin: 0 0 .4875rem 0
@@ -982,13 +982,13 @@ ul.contact-icons>li a {
   -webkit-transition: background-color .2s ease-in-out, box-shadow .2s ease-in-out, color .2s ease-in-out;
   -ms-transition: background-color .2s ease-in-out, box-shadow .2s ease-in-out, color .2s ease-in-out;
   transition: background-color .2s ease-in-out, box-shadow .2s ease-in-out, color .2s ease-in-out;
-  background-color: #1a293c;
+  background-color: #131313;
   border: 0;
   border-radius: .5rem;
-  color: #7db5d2 !important;
+  color: rgb(186, 186, 186)!important;
   cursor: pointer;
   display: inline-block;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: .6rem;
   font-weight: 700;
   height: 2.75rem;
@@ -1115,7 +1115,7 @@ ul.contact-icons>li a {
   overflow-x: hidden;
   overflow-y: auto;
   margin-right: 1rem;
-  background: #1f354d !important;
+  background: #171717 !important;
 }
 
 .panel>* {
@@ -1995,7 +1995,7 @@ ul.contact-icons>li a {
   -webkit-flex-shrink: 0;
   -ms-flex-shrink: 0;
   flex-shrink: 0;
-  background: #1f354d !important;
+  background: #171717 !important;
 }
 
 .panel.banner .content>.actions:last-child {
@@ -2215,7 +2215,7 @@ body.is-preload #wrapper {
 }
 
 .transparent-icon:before {
-  color: #7db5d2 !important;
+  color: #595959 !important;
   background-color: transparent !important;
   font-size: 2.2rem !important
 }
@@ -2266,7 +2266,7 @@ label {
 }
 
 .da-member {
-  background: #1a293c;
+  background: #131313;
   color: #7db5d2;
   border-radius: 0.5rem;
   padding: 1rem;
@@ -2341,7 +2341,7 @@ label {
 }
 
 #text-mist, #text-raindrop, #text-Docs{
-  background: #1a293c !important;
+  background: #131313 !important;
   color: #7db5d2 !important;
   padding: 1rem;
   position: absolute;
@@ -2363,7 +2363,7 @@ label {
 }
 
 #overlayContactUsText {
-  background: #1a293c !important;
+  background: #131313 !important;
   color: #7db5d2 !important;
   padding: 1rem;
   position: absolute;
@@ -2423,7 +2423,7 @@ label {
 }
 
 textarea.fcf-form-control {
-  font-family: Muli;
+  font-family: 'Roboto', sans-serif;
   background: #6f87a3;
   height: 100%;
   width: 250px
@@ -2598,7 +2598,7 @@ img:hover {
 }
 
 .Languages .Languages-btns {
-  background-color: #1f354d !important;
+  background-color: #171717 !important;
   border-radius: 0.5rem !important;
 }
 
@@ -2610,7 +2610,7 @@ img:hover {
 
 .Languages .Language-select option {
   color: rgba(255, 255, 255, .875);
-  background: #1f354d
+  background: #171717
 }
 
 .Languages .Languages-btns {
@@ -2729,14 +2729,10 @@ a:hover {
 }
 
 #hydro-logo {
-  height: 100px;
-  width: 100px;
   opacity: 1 !important;
 }
 
 #ecosystem-pic {
-  height: 430px;
-  width: 400px;
   opacity: 1 !important;
 }
 
@@ -2788,7 +2784,7 @@ a:hover {
   }
 
   .da-member {
-    background: #1a293c;
+    background: #131313;
     color: #7db5d2;
     border-radius: 0.5rem;
     padding: 2rem;
@@ -3003,7 +2999,7 @@ a:hover {
 }
 */
 .floating-menu {
-  background: #1f354d;
+  background: #171717;
   width: auto;
   z-index: 1000;
   position: fixed;
