--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,6 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
-a, b, body, center, div, form, h1, h2, h3, h4, h5, h6, header, html, i, img, label, li, p, q, s, section, span, ul {
+a,
+b,
+body,
+center,
+div,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+html,
+i,
+img,
+label,
+li,
+p,
+q,
+s,
+section,
+span,
+ul {
   margin: 0;
   padding: 0;
   border: 0;
@@ -10,7 +33,8 @@ a, b, body, center, div, form, h1, h2, h3, h4, h5, h6, header, html, i, img, lab
   color: rgb(186, 186, 186) !important
 }
 
-header, section {
+header,
+section {
   display: block
 }
 
@@ -26,7 +50,8 @@ q {
   quotes: none
 }
 
-q:after, q:before {
+q:after,
+q:before {
   content: "";
   content: none
 }
@@ -40,7 +65,9 @@ input::-moz-focus-inner {
   padding: 0
 }
 
-input, select, textarea {
+input,
+select,
+textarea {
   -moz-appearance: none;
   -webkit-appearance: none;
   -ms-appearance: none;
@@ -135,7 +162,9 @@ html {
   box-sizing: border-box
 }
 
-*, :after, :before {
+*,
+:after,
+:before {
   box-sizing: inherit
 }
 
@@ -201,7 +230,9 @@ body:after {
   background-color: #222
 }
 
-body.is-preload *, body.is-preload :after, body.is-preload :before {
+body.is-preload *,
+body.is-preload :after,
+body.is-preload :before {
   -moz-animation: none !important;
   -webkit-animation: none !important;
   -ms-animation: none !important;
@@ -237,7 +268,9 @@ body.is-preload:before {
 }
 
 @media screen and (max-width:480px) {
-  body, html {
+
+  body,
+  html {
     min-width: 320px
   }
 }
@@ -261,7 +294,10 @@ html {
   }
 }
 
-body, input, select, textarea {
+body,
+input,
+select,
+textarea {
   color: rgba(255, 255, 255, .75);
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
@@ -300,7 +336,12 @@ body.is-ie p {
   width: 100%
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: rgba(255, 255, 255, .875);
   font-family: 'Roboto', sans-serif;
   font-weight: 700;
@@ -309,7 +350,12 @@ h1, h2, h3, h4, h5, h6 {
   letter-spacing: -.05em
 }
 
-h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
+h1 a,
+h2 a,
+h3 a,
+h4 a,
+h5 a,
+h6 a {
   color: inherit;
   text-decoration: none
 }
@@ -383,7 +429,12 @@ h6 {
     font-size: .7rem
   }
 
-  h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
+  h1 br,
+  h2 br,
+  h3 br,
+  h4 br,
+  h5 br,
+  h6 br {
     display: none
   }
 }
@@ -411,7 +462,12 @@ label {
   margin: 0 0 .4875rem 0
 }
 
-input[type=email], input[type=password], input[type=tel], input[type=text], select, textarea {
+input[type=email],
+input[type=password],
+input[type=tel],
+input[type=text],
+select,
+textarea {
   -moz-appearance: none;
   -webkit-appearance: none;
   -ms-appearance: none;
@@ -427,11 +483,21 @@ input[type=email], input[type=password], input[type=tel], input[type=text], sele
   width: 100%
 }
 
-input[type=email]:invalid, input[type=password]:invalid, input[type=tel]:invalid, input[type=text]:invalid, select:invalid, textarea:invalid {
+input[type=email]:invalid,
+input[type=password]:invalid,
+input[type=tel]:invalid,
+input[type=text]:invalid,
+select:invalid,
+textarea:invalid {
   box-shadow: none
 }
 
-input[type=email]:focus, input[type=password]:focus, input[type=tel]:focus, input[type=text]:focus, select:focus, textarea:focus {
+input[type=email]:focus,
+input[type=password]:focus,
+input[type=tel]:focus,
+input[type=text]:focus,
+select:focus,
+textarea:focus {
   border-color: #ffe4b4
 }
 
@@ -463,7 +529,10 @@ select::-ms-expand {
   display: none
 }
 
-input[type=email], input[type=password], input[type=text], select {
+input[type=email],
+input[type=password],
+input[type=text],
+select {
   height: 2.5rem
 }
 
@@ -471,7 +540,8 @@ textarea {
   padding: .75rem 1rem
 }
 
-input[type=checkbox], input[type=radio] {
+input[type=checkbox],
+input[type=radio] {
   -moz-appearance: none;
   -webkit-appearance: none;
   -ms-appearance: none;
@@ -484,7 +554,8 @@ input[type=checkbox], input[type=radio] {
   z-index: -1
 }
 
-input[type=checkbox]+label, input[type=radio]+label {
+input[type=checkbox]+label,
+input[type=radio]+label {
   text-decoration: none;
   position: relative;
   color: rgba(255, 255, 255, .75);
@@ -497,7 +568,8 @@ input[type=checkbox]+label, input[type=radio]+label {
   padding-right: 1rem
 }
 
-input[type=checkbox]+label:before, input[type=radio]+label:before {
+input[type=checkbox]+label:before,
+input[type=radio]+label:before {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   display: inline-block;
@@ -510,7 +582,8 @@ input[type=checkbox]+label:before, input[type=radio]+label:before {
   font-weight: 900
 }
 
-input[type=checkbox]+label:before, input[type=radio]+label:before {
+input[type=checkbox]+label:before,
+input[type=radio]+label:before {
   content: "";
   display: inline-block;
   font-size: .8rem;
@@ -527,22 +600,26 @@ input[type=checkbox]+label:before, input[type=radio]+label:before {
   text-align: center
 }
 
-body.is-ie input[type=checkbox]+label:before, body.is-ie input[type=radio]+label:before {
+body.is-ie input[type=checkbox]+label:before,
+body.is-ie input[type=radio]+label:before {
   line-height: 1.5
 }
 
-input[type=checkbox]:checked+label:before, input[type=radio]:checked+label:before {
+input[type=checkbox]:checked+label:before,
+input[type=radio]:checked+label:before {
   content: "\f00c";
   background: rgba(255, 255, 255, .875);
   border-color: rgba(255, 255, 255, .875)
 }
 
-input[type=checkbox]:focus+label:before, input[type=radio]:focus+label:before {
+input[type=checkbox]:focus+label:before,
+input[type=radio]:focus+label:before {
   border-color: #ffe4b4;
   box-shadow: 0 0 0 1px #ffe4b4
 }
 
-input[type=checkbox]:focus:checked+label:before, input[type=radio]:focus:checked+label:before {
+input[type=checkbox]:focus:checked+label:before,
+input[type=radio]:focus:checked+label:before {
   background: #ffe4b4
 }
 
@@ -727,11 +804,13 @@ input[type=radio]+label:before {
   display: block
 }
 
-.image.left, .image.right {
+.image.left,
+.image.right {
   max-width: 40%
 }
 
-.image.left img, .image.right img {
+.image.left img,
+.image.right img {
   width: 100%
 }
 
@@ -973,7 +1052,11 @@ ul.contact-icons>li a {
   border-bottom: 0
 }
 
-.button, button, input[type=button], input[type=reset], input[type=submit] {
+.button,
+button,
+input[type=button],
+input[type=reset],
+input[type=submit] {
   -moz-appearance: none;
   -webkit-appearance: none;
   -ms-appearance: none;
@@ -985,7 +1068,7 @@ ul.contact-icons>li a {
   background-color: #131313;
   border: 0;
   border-radius: .5rem;
-  color: rgb(186, 186, 186)!important;
+  color: rgb(186, 186, 186) !important;
   cursor: pointer;
   display: inline-block;
   font-family: 'Roboto', sans-serif;
@@ -1001,16 +1084,28 @@ ul.contact-icons>li a {
   white-space: nowrap
 }
 
-.button:hover, button:hover, input[type=button]:hover, input[type=reset]:hover, input[type=submit]:hover {
+.button:hover,
+button:hover,
+input[type=button]:hover,
+input[type=reset]:hover,
+input[type=submit]:hover {
   background: #212121;
   color: #fff !important
 }
 
-.button:active, button:active, input[type=button]:active, input[type=reset]:active, input[type=submit]:active {
+.button:active,
+button:active,
+input[type=button]:active,
+input[type=reset]:active,
+input[type=submit]:active {
   background-color: rgba(255, 228, 180, .125)
 }
 
-.button.icon:before, button.icon:before, input[type=button].icon:before, input[type=reset].icon:before, input[type=submit].icon:before {
+.button.icon:before,
+button.icon:before,
+input[type=button].icon:before,
+input[type=reset].icon:before,
+input[type=submit].icon:before {
   display: inline-block;
   position: relative;
   top: -.075rem;
@@ -1019,7 +1114,11 @@ ul.contact-icons>li a {
   margin: 0 .375rem 0 -.325rem
 }
 
-.button:disabled, button:disabled, input[type=button]:disabled, input[type=reset]:disabled, input[type=submit]:disabled {
+.button:disabled,
+button:disabled,
+input[type=button]:disabled,
+input[type=reset]:disabled,
+input[type=submit]:disabled {
   pointer-events: none;
   cursor: default;
   opacity: .5
@@ -2231,6 +2330,7 @@ body.is-preload #wrapper {
   }
 }
 
+
 .product_list {
   width: 200px auto;
   display: flex;
@@ -2266,12 +2366,9 @@ label {
 }
 
 .da-member {
-  background: #131313;
-  color: #7db5d2;
-  border-radius: 0.5rem;
   padding: 1rem;
   margin: 1rem;
-  height: 290px;
+  height: 290px auto;
   width: 200px;
 }
 
@@ -2327,7 +2424,10 @@ label {
   border-radius: 0.5rem !important;
 }
 
-#overlayContactUs, #overlayMist, #overlayRaindrop, #overlayDocs {
+#overlayContactUs,
+#overlayMist,
+#overlayRaindrop,
+#overlayDocs {
   position: fixed;
   display: none;
   width: 100%;
@@ -2340,7 +2440,9 @@ label {
   cursor: pointer
 }
 
-#text-mist, #text-raindrop, #text-Docs{
+#text-mist,
+#text-raindrop,
+#text-Docs {
   background: #131313 !important;
   color: #fff !important;
   padding: 1rem;
@@ -2353,13 +2455,14 @@ label {
   border-radius: 10px
 }
 
-.wrapper-privacy{
-  height: 50rem auto!important;
-  width: 100rem auto!important;
+.wrapper-privacy {
+  height: 50rem auto !important;
+  width: 100rem auto !important;
 
 }
-.privacy-step{
-  height:50px;
+
+.privacy-step {
+  height: 50px;
 }
 
 #overlayContactUsText {
@@ -2517,7 +2620,7 @@ label.fcf-label {
 .waves {
   position: relative;
   width: 100%;
-  
+
   min-height: 100px;
   max-height: 200px;
   margin-bottom: -13rem !important;
@@ -2529,48 +2632,6 @@ label.fcf-label {
   background-color: #fff
 }
 
-.parallax>use {
-  animation: move-forever 25s cubic-bezier(.55, .5, .45, .5) infinite
-}
-
-.parallax>use:nth-child(1) {
-  animation-delay: -2s;
-  animation-duration: 7s
-}
-
-.parallax>use:nth-child(2) {
-  animation-delay: -3s;
-  animation-duration: 10s
-}
-
-.parallax>use:nth-child(3) {
-  animation-delay: -4s;
-  animation-duration: 13s
-}
-
-.parallax>use:nth-child(4) {
-  animation-delay: -5s;
-  animation-duration: 20s
-}
-
-@keyframes move-forever {
-  0% {
-    transform: translate3d(-90px, 0, 0)
-  }
-
-  100% {
-    transform: translate3d(85px, 0, 0)
-  }
-}
-
-@media (max-width:768px) {
-  .waves {
-    height: 80px;
-    min-height: 40px;
-    margin-bottom: 0 !important
-  }
-}
-
 img:hover {
   opacity: .5
 }
@@ -2580,15 +2641,10 @@ img:hover {
 }
 
 .Languages {
-  /* padding: 1.5rem 3.5rem 2rem 3.5rem; */
   z-index: 999;
-  /* position: absolute; */
   left: 0;
   top: 0;
   text-align: center;
-  /* margin-top: 3rem; */
-  /* display: inline-block; */
-  /* padding: 1rem 0 0 5rem; */
   border-radius: 1rem !important;
 }
 
@@ -2726,7 +2782,6 @@ a:hover {
 
 #intro-center {
   margin: 2rem;
-  /* margin-top: -31rem!important; */
 }
 
 #hydro-logo {
@@ -2755,6 +2810,10 @@ a:hover {
   padding-bottom: 0.6rem;
 }
 
+.partner-pic{
+  height: auto;
+}
+
 .da-team-outer {
   width: auto;
   display: flex;
@@ -2767,26 +2826,26 @@ a:hover {
 /* Mobile Fixes */
 @media screen and (max-width:736px) {
 
-  .tokenomics{
-    margin: 0  !important;
+  .tokenomics {
+    margin: 0 !important;
   }
 
-  .blockchains{
+  .blockchains {
     display: flex;
-    flex-direction: column!important;
+    flex-direction: column !important;
   }
 
-  #blockchain-specs{
-    width: auto!important;
+  #blockchain-specs {
+    width: auto !important;
     align-items: center;
   }
 
-  .eth-specs{
+  .eth-specs {
     margin: 0 !important;
     padding: 0 !important;
   }
 
-  .bsc-specs{
+  .bsc-specs {
     margin: 0 !important;
     padding: 0 !important;
   }
@@ -2796,7 +2855,8 @@ a:hover {
     height: 125px;
   }
 
-  .da-name, .da-position {
+  .da-name,
+  .da-position {
     font-size: 14px !important;
   }
 
@@ -2810,8 +2870,6 @@ a:hover {
   }
 
   .da-member {
-    background: #131313;
-    border-radius: 0.5rem;
     padding: 2rem;
     padding-left: 4rem;
     padding-right: 4rem;
@@ -2820,7 +2878,6 @@ a:hover {
     justify-content: center;
     text-align: center;
     width: auto;
-    
   }
 
   .da-team-outer {
@@ -2966,14 +3023,14 @@ a:hover {
   margin: 0 0.7em;
 }
 
-.small-text{
+.small-text {
   font-size: 9px;
-  color: transparent!important;
+  color: transparent !important;
 }
 
 /* Multichains-section */
 
-.tokenomics{
+.tokenomics {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -2981,23 +3038,23 @@ a:hover {
   margin-right: 5rem;
 }
 
-#tokenomics-section{
+#tokenomics-section {
   width: 50rem;
 }
 
-.blockchains-section{
+.blockchains-section {
   padding: 1rem;
 }
 
-.escrow-section{
+.escrow-section {
   padding: 1rem;
 }
 
-.evaporation-section{
+.evaporation-section {
   padding: 1rem;
 }
 
-#blockchain-specs{
+#blockchain-specs {
   width: 60rem;
   display: flex;
   flex-direction: column;
@@ -3005,44 +3062,44 @@ a:hover {
   justify-content: space-between;
 }
 
-.blockchains{
+.blockchains {
   display: flex;
   flex-direction: row;
 }
 
-.spec-sheet{
+.spec-sheet {
   font-size: 14px;
   display: flex;
   flex-direction: column;
 }
 
-.spec-sheet label{
+.spec-sheet label {
   font-size: 12px;
   font-weight: 600;
   margin-bottom: 1px;
 }
 
-.eth-specs{
+.eth-specs {
   display: flex;
   flex-direction: column;
   padding: 3rem;
   margin-right: 2rem;
 }
 
-#eth-logo{
+#eth-logo {
   padding-bottom: 1rem;
   width: 100px;
   height: auto;
 }
 
-.bsc-specs{
+.bsc-specs {
   display: flex;
   flex-direction: column;
-  padding:3rem;
+  padding: 3rem;
   margin-left: 2rem;
 }
 
-#bsc-logo{
+#bsc-logo {
   padding-bottom: 0.9rem;
   width: 100px;
   height: auto;
