--- a/_includes/body_javascripts.html
+++ b/_includes/body_javascripts.html
@@ -5,3 +5,7 @@
 <script src="assets/js/main.js"></script>
 <script src="assets/js/overlay.js"></script>
 <script src="assets/js/blog-data.js"></script>
+<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+<script src="assets/js/particle.js"></script>
+
+
