Add meta for twitter

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -12,6 +12,14 @@
 <meta property="og:description" content="{% t page.description %}"/>
 <meta property="og:description" content="Hydro"/>
 
+<!-- Twitter -->
+  
+  <meta property="twitter:url" content="https://twitter.com/HydroBlockchain">
+  <meta property="twitter:title" content="Project Hydro">
+  <meta property="twitter:card" content="summary_large_image"><meta property="twitter:description" content="Hydro is the life of the new #decentralized global economy, Open-source #blockchain based #Identity linked #payments #DeFi | Stake $HDYRO on http://aegirwallet.org">
+  <meta property="twitter:image" content="https://pbs.twimg.com/profile_images/1358971770523381760/KY0MvdH4_400x400.jpg">
+
+
 <link rel="canonical" href="{{ site.url }}{{ site.baseurl }}{{ page.url }}">
 
 {% for lang in site.languages %}
