--- a/_includes/stylesheets.html
+++ b/_includes/stylesheets.html
@@ -1,6 +1,6 @@
 
 <link rel="stylesheet" href="assets/css/main.css" />
-<link rel="manifest" href="assets/site.webmanifest">
+<link rel="manifest" href="manifest.json">
 <link
 	rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
